editor: added download/copy options. UI refactors